kubernetes/gateway-vertx.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: gateway-vertx
  labels:
    app: gateway-vertx
    app.kubernetes.io/component: gateway-vertx
    app.kubernetes.io/instance: gateway-vertx
    app.kubernetes.io/name: quarkus
    app.kubernetes.io/part-of: coolstore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-vertx
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: gateway-vertx
    spec:
      containers:
        - name: gateway-vertx
          image: quay.io/modernizingjavaappsbook/gateway-vertx:latest
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          livenessProbe:
            httpGet:
              path: /q/health/live
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /q/health/ready
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
---
kind: Service
apiVersion: v1
metadata:
  name: gateway-vertx
  labels:
    app: gateway-vertx
    app.kubernetes.io/component: gateway-vertx
    app.kubernetes.io/instance: gateway-vertx
    app.kubernetes.io/part-of: coolstore
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: gateway-vertx
  type: ClusterIP
  sessionAffinity: None
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: gateway-vertx
  labels:
    app: gateway-vertx
    app.kubernetes.io/component: gateway-vertx
    app.kubernetes.io/instance: gateway-vertx
    app.kubernetes.io/part-of: coolstore
spec:
  to:
    kind: Service
    name: gateway-vertx
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
